gen/grammar/p32Parser.java
// Generated from /home/mateusz/IdeaProjects/modprojekt/src/grammar/p32.g4 by ANTLR 4.13.2
package grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class p32Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, STRING=43, WS=44;
	public static final int
		RULE_program = 0, RULE_head = 1, RULE_body = 2, RULE_headElement = 3, 
		RULE_bodyElement = 4, RULE_heading = 5, RULE_content = 6, RULE_tableHeader = 7, 
		RULE_tableRow = 8, RULE_tableCell = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "head", "body", "headElement", "bodyElement", "heading", "content", 
			"tableHeader", "tableRow", "tableCell"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'|{'", "'}|'", "'!{'", "'}!'", "';'", "'/;'", "'*'", "'/*'", "'@'", 
			"'/@'", "'?'", "'/?'", "'`'", "'/`'", "'%'", "'/%'", "'-'", "'/-'", "'&'", 
			"'/&'", "'$'", "'/$'", "'/|'", "'='", "'/='", "'^'", "'/^'", "'_'", "'/_'", 
			"'~'", "'/~'", "'+'", "'/+'", "'['", "'|'", "']'", "'######'", "'#####'", 
			"'####'", "'###'", "'##'", "'#'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "STRING", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "p32.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public p32Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public HeadContext head() {
			return getRuleContext(HeadContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode EOF() { return getToken(p32Parser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof p32Visitor ) return ((p32Visitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(20);
			head();
			setState(21);
			body();
			setState(22);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeadContext extends ParserRuleContext {
		public List<HeadElementContext> headElement() {
			return getRuleContexts(HeadElementContext.class);
		}
		public HeadElementContext headElement(int i) {
			return getRuleContext(HeadElementContext.class,i);
		}
		public HeadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_head; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).enterHead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).exitHead(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof p32Visitor ) return ((p32Visitor<? extends T>)visitor).visitHead(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeadContext head() throws RecognitionException {
		HeadContext _localctx = new HeadContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_head);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			match(T__0);
			setState(28);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 10912L) != 0)) {
				{
				{
				setState(25);
				headElement();
				}
				}
				setState(30);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(31);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyContext extends ParserRuleContext {
		public List<BodyElementContext> bodyElement() {
			return getRuleContexts(BodyElementContext.class);
		}
		public BodyElementContext bodyElement(int i) {
			return getRuleContext(BodyElementContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof p32Visitor ) return ((p32Visitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			match(T__2);
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 17477650786944L) != 0)) {
				{
				{
				setState(34);
				bodyElement();
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(40);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeadElementContext extends ParserRuleContext {
		public HeadElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_headElement; }
	 
		public HeadElementContext() { }
		public void copyFrom(HeadElementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TitleElementContext extends HeadElementContext {
		public TerminalNode STRING() { return getToken(p32Parser.STRING, 0); }
		public TitleElementContext(HeadElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).enterTitleElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).exitTitleElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof p32Visitor ) return ((p32Visitor<? extends T>)visitor).visitTitleElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LinkElementContext extends HeadElementContext {
		public TerminalNode STRING() { return getToken(p32Parser.STRING, 0); }
		public LinkElementContext(HeadElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).enterLinkElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).exitLinkElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof p32Visitor ) return ((p32Visitor<? extends T>)visitor).visitLinkElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BaseElementContext extends HeadElementContext {
		public TerminalNode STRING() { return getToken(p32Parser.STRING, 0); }
		public BaseElementContext(HeadElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).enterBaseElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).exitBaseElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof p32Visitor ) return ((p32Visitor<? extends T>)visitor).visitBaseElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StyleElementContext extends HeadElementContext {
		public TerminalNode STRING() { return getToken(p32Parser.STRING, 0); }
		public StyleElementContext(HeadElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).enterStyleElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).exitStyleElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof p32Visitor ) return ((p32Visitor<? extends T>)visitor).visitStyleElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MetaElementContext extends HeadElementContext {
		public TerminalNode STRING() { return getToken(p32Parser.STRING, 0); }
		public MetaElementContext(HeadElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).enterMetaElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).exitMetaElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof p32Visitor ) return ((p32Visitor<? extends T>)visitor).visitMetaElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeadElementContext headElement() throws RecognitionException {
		HeadElementContext _localctx = new HeadElementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_headElement);
		try {
			setState(57);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				_localctx = new MetaElementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				match(T__4);
				setState(43);
				match(STRING);
				setState(44);
				match(T__5);
				}
				break;
			case T__6:
				_localctx = new TitleElementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(45);
				match(T__6);
				setState(46);
				match(STRING);
				setState(47);
				match(T__7);
				}
				break;
			case T__8:
				_localctx = new BaseElementContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(48);
				match(T__8);
				setState(49);
				match(STRING);
				setState(50);
				match(T__9);
				}
				break;
			case T__10:
				_localctx = new LinkElementContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(51);
				match(T__10);
				setState(52);
				match(STRING);
				setState(53);
				match(T__11);
				}
				break;
			case T__12:
				_localctx = new StyleElementContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(54);
				match(T__12);
				setState(55);
				match(STRING);
				setState(56);
				match(T__13);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyElementContext extends ParserRuleContext {
		public BodyElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bodyElement; }
	 
		public BodyElementContext() { }
		public void copyFrom(BodyElementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OrderedListElementContext extends BodyElementContext {
		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}
		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class,i);
		}
		public OrderedListElementContext(BodyElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).enterOrderedListElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).exitOrderedListElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof p32Visitor ) return ((p32Visitor<? extends T>)visitor).visitOrderedListElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class UnderlineTextContext extends BodyElementContext {
		public TerminalNode STRING() { return getToken(p32Parser.STRING, 0); }
		public UnderlineTextContext(BodyElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).enterUnderlineText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).exitUnderlineText(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof p32Visitor ) return ((p32Visitor<? extends T>)visitor).visitUnderlineText(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ItalicTextContext extends BodyElementContext {
		public TerminalNode STRING() { return getToken(p32Parser.STRING, 0); }
		public ItalicTextContext(BodyElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).enterItalicText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).exitItalicText(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof p32Visitor ) return ((p32Visitor<? extends T>)visitor).visitItalicText(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DivElementContext extends BodyElementContext {
		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}
		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class,i);
		}
		public DivElementContext(BodyElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).enterDivElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).exitDivElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof p32Visitor ) return ((p32Visitor<? extends T>)visitor).visitDivElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ParagraphElementContext extends BodyElementContext {
		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}
		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class,i);
		}
		public ParagraphElementContext(BodyElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).enterParagraphElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).exitParagraphElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof p32Visitor ) return ((p32Visitor<? extends T>)visitor).visitParagraphElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BoldTextContext extends BodyElementContext {
		public TerminalNode STRING() { return getToken(p32Parser.STRING, 0); }
		public BoldTextContext(BodyElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).enterBoldText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).exitBoldText(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof p32Visitor ) return ((p32Visitor<? extends T>)visitor).visitBoldText(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImageElementContext extends BodyElementContext {
		public List<TerminalNode> STRING() { return getTokens(p32Parser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(p32Parser.STRING, i);
		}
		public ImageElementContext(BodyElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).enterImageElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).exitImageElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof p32Visitor ) return ((p32Visitor<? extends T>)visitor).visitImageElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LineBreakContext extends BodyElementContext {
		public TerminalNode STRING() { return getToken(p32Parser.STRING, 0); }
		public LineBreakContext(BodyElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).enterLineBreak(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).exitLineBreak(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof p32Visitor ) return ((p32Visitor<? extends T>)visitor).visitLineBreak(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class UnorderedListElementContext extends BodyElementContext {
		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}
		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class,i);
		}
		public UnorderedListElementContext(BodyElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).enterUnorderedListElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).exitUnorderedListElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof p32Visitor ) return ((p32Visitor<? extends T>)visitor).visitUnorderedListElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HeadingElementContext extends BodyElementContext {
		public HeadingContext heading() {
			return getRuleContext(HeadingContext.class,0);
		}
		public HeadingElementContext(BodyElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).enterHeadingElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).exitHeadingElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof p32Visitor ) return ((p32Visitor<? extends T>)visitor).visitHeadingElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ListItemElementContext extends BodyElementContext {
		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}
		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class,i);
		}
		public ListItemElementContext(BodyElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).enterListItemElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).exitListItemElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof p32Visitor ) return ((p32Visitor<? extends T>)visitor).visitListItemElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CodeElementContext extends BodyElementContext {
		public TerminalNode STRING() { return getToken(p32Parser.STRING, 0); }
		public CodeElementContext(BodyElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).enterCodeElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).exitCodeElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof p32Visitor ) return ((p32Visitor<? extends T>)visitor).visitCodeElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PlainTextContext extends BodyElementContext {
		public TerminalNode STRING() { return getToken(p32Parser.STRING, 0); }
		public PlainTextContext(BodyElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).enterPlainText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).exitPlainText(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof p32Visitor ) return ((p32Visitor<? extends T>)visitor).visitPlainText(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SpanElementContext extends BodyElementContext {
		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}
		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class,i);
		}
		public SpanElementContext(BodyElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).enterSpanElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).exitSpanElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof p32Visitor ) return ((p32Visitor<? extends T>)visitor).visitSpanElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TableElementContext extends BodyElementContext {
		public TableHeaderContext tableHeader() {
			return getRuleContext(TableHeaderContext.class,0);
		}
		public List<TableRowContext> tableRow() {
			return getRuleContexts(TableRowContext.class);
		}
		public TableRowContext tableRow(int i) {
			return getRuleContext(TableRowContext.class,i);
		}
		public TableElementContext(BodyElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).enterTableElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).exitTableElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof p32Visitor ) return ((p32Visitor<? extends T>)visitor).visitTableElement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HyperlinkElementContext extends BodyElementContext {
		public List<TerminalNode> STRING() { return getTokens(p32Parser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(p32Parser.STRING, i);
		}
		public HyperlinkElementContext(BodyElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).enterHyperlinkElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof p32Listener ) ((p32Listener)listener).exitHyperlinkElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof p32Visitor ) return ((p32Visitor<? extends T>)visitor).visitHyperlinkElement(this);
			else return visitor.visitChildren(this);
		}
	}
